--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,9 +9,11 @@ charset-normalizer==3.4.1
 cleo==2.1.0
 click==8.1.8
 crashtest==0.4.1
+cryptography==44.0.0
 distlib==0.3.9
 distro==1.9.0
 dnspython==2.7.0
+docusign-esign==4.0.0
 dulwich==0.21.7
 fastapi==0.115.7
 fastjsonschema==2.21.1
@@ -35,6 +37,7 @@ keyring==24.3.1
 more-itertools==10.5.0
 motor==3.6.1
 msgpack==1.1.0
+nose==1.3.7
 openai==1.60.2
 packaging==24.2
 pexpect==4.9.0
@@ -52,14 +55,18 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyJWT==2.10.1
 pymongo==4.9.2
 pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 RapidFuzz==3.10.1
 requests==2.32.3
 requests-toolbelt==1.0.0
 rsa==4.9
+setuptools==75.8.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
 tomlkit==0.13.2
